# badpiggies-cryptor-cli

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  publish.yml  release.yml  rust.yml  test.yml
cli/: Cargo.toml
cli/src/: cli.rs  main.rs
core/: Cargo.toml
core/src/: constants.rs  crypto.rs  errors.rs  lib.rs
scripts/: batch.ps1  batch.sh
src/: cli.rs  constants.rs  crypto.rs  errors.rs  lib.rs  main.rs  resource.rs
tests/: example.xml
