[package]
name = "badpiggies-cryptor-cli"
version = "0.4.1"
edition = "2021"
authors = ["ed1th"]
description = "Bad Piggies user data cryptor"
categories = ["command-line-utilities"]
readme = "README.md"
license = "GPL-3.0-or-later"
repository = "https://github.com/LambdaEd1th/badpiggies-cryptor-cli"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = { version = "0" }
sha1 = { version = "0" }
cbc = { version = "0", features = ["std"] }
pbkdf2 = { version = "0", features = ["hmac"] }
clap = { version = "4", features = ["derive", "help"] }
rust-embed = { version = "8", features = ["compression"] }
